# bazel-cache-demo

./: .bazelrc  README.md
tools/: BUILD.bazel  archiver.py
